Added integration options with configurable scan interval

--- a/custom_components/dbuezas_eq3btsmart/translations/en.json
+++ b/custom_components/dbuezas_eq3btsmart/translations/en.json
@@ -23,5 +23,17 @@
         }
       }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "EQ-3 Options",
+        "description": "Scan interval of 1 minute keeps the device connected and makes response instantaneous but it may affect battery life. Default is 5 minutes.",
+        "data": {
+          "advanced": "Advanced mode. Adds extra debug entities",
+          "scan_interval": "Scan interval (minutes) "
+        }
+      }
+    }
   }
 }
