Feat/config options (#29)
* simplified validation

* Added integration options with configurable scan interval

* Adds option to calculate current_temperature from the valve state and target temnp

* Schedule updates a scan_interval AFTER the previous scan succeeded (to reduce parallel updates)

* Change precision to 0.1 so the current temperature is more granular

* Type fixes

* Update readme.md

* Removed unnecessary logging

* Fix HA not showing when device becomes unavailable

* changed "guessed" current temperature so it max out at target temp

* Fix error when unloading device

* Re-added automatic pairing

* Added adapter selection and config flow options for everything.

* Made the debug entities optional and disabled by default

--- a/custom_components/dbuezas_eq3btsmart/translations/en.json
+++ b/custom_components/dbuezas_eq3btsmart/translations/en.json
@@ -23,5 +23,21 @@
         }
       }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "EQ-3 Options",
+        "description": "Increasing the scan interval to 10 minutes and disabling persistant connections may save battery. Set the bluetooth adapter to 'local' avoid using BTProxy, or pick manually if you have multiple available and want to distribute connection across them.",
+        "data": {
+          "scan_interval": "Scan interval in minutes",
+          "conf_current_temp_selector": "What to show as current temperature",
+          "conf_external_temp_sensor": "External temperature sensor",
+          "conf_adapter": "Bluetooth adapter",
+          "conf_stay_connected": "Keep bluetooth connection open",
+          "conf_debug_mode": "Debug mode. Adds extra entities for debugging."
+        }
+      }
+    }
   }
 }
