--- a/custom_components/dbuezas_eq3btsmart/translations/en.json
+++ b/custom_components/dbuezas_eq3btsmart/translations/en.json
@@ -32,6 +32,7 @@
         "data": {
           "scan_interval": "Scan interval in minutes",
           "conf_current_temp_selector": "What to show as current temperature",
+          "conf_target_temp_selector": "What to show as target temperature",
           "conf_external_temp_sensor": "External temperature sensor",
           "conf_adapter": "Bluetooth adapter",
           "conf_stay_connected": "Keep bluetooth connection open",
